# rawrtc-terminal-demo

c/: CMakeLists.txt
c/src/: CMakeLists.txt  rawrtc-sensor.c
web/: sensor.html  sensor.js
